--- a/style.css
+++ b/style.css
@@ -167,4 +167,10 @@ input[type="date"] {
   border: none;
   background-color: #F5F5F5;
   color: #7A7F83;
+  outline: none;
+  font-weight: 500;
+}
+
+.desc-border:focus {
+  color: #293038;
 }
