--- a/style.css
+++ b/style.css
@@ -174,3 +174,17 @@ input[type="date"] {
 .desc-border:focus {
   color: #293038;
 }
+
+@media only screen and (max-width: 768px) {
+  .text-profil {
+    display: none;
+  }
+
+  .content {
+    width: 100%;
+  }
+
+  .header-content div p {
+    font-size: 12px;
+  }
+}
